fixed top distorted circles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2269,3 +2269,41 @@
   width: 100%;
   height: 100%;
 }
+
+.dashboard .family-div .report-circle {
+  width: 100%;
+  height: 100%;
+}
+.dashboard .family-div .familiy-circle {
+  max-width: 33.33%;
+  flex: 0 0 33.33%;
+}
+@media (max-width:1550px){
+  .dashboard .family-div .report-circle {
+    font-size: 20px;
+  }
+}
+@media (min-width: 1199px) and (max-width: 1440px){
+  .dashboard {
+    .family-div {
+      .familiy-circle {
+        font-size: 14px !important;
+        span {
+          font-size: 11px;
+        }
+      }
+      .dashboard-btn {
+        height: 40px;
+        min-width: 136px !important;
+        font-size: 14px !important;
+        max-width: 120px;
+      }
+      .report-circle {
+        border: 5px solid #1976d2;
+      }
+      .subtitle {
+        padding-right: 15px;
+      }
+    }
+  }
+}
